Added some extra open API documentation. But it turns out we generate it from code. So added some to code aswell.
POST seems to work. GET returns an error.
