# src/main/java/ee/taltech/procurementSystemBackend/models/search/MiniprocurementPartnerSearch.java
@@ -5,15 +5,23 @@ import ee.taltech.procurementSystemBackend.models.model.MiniprocurementPartner;
 import ee.taltech.procurementSystemBackend.repository.person.Specifications;
 import org.springframework.data.domain.Sort;
 
+import javax.validation.constraints.NotBlank;
+
 public class MiniprocurementPartnerSearch extends SearchObject<MiniprocurementPartner> {
 
-    private String miniprocurementPartnerEmail;
-    private String miniprocurementPartnerName;
+    private Integer miniprocurementPartnerLinkId;
+    private Integer miniprocurementPartnerProcurementId;
+    private Integer miniprocurementPartnerPartnerId;
+    private String miniprocurementPartnerTimeAdded;
+    private String miniprocurementPartnerLinkFirstAccessed;
 
-    public MiniprocurementPartnerSearch(Integer limit, Integer page, String sort, Sort.Direction dir, String miniprocurementPartnerEmail, String miniprocurementPartnerName) {
+    public MiniprocurementPartnerSearch(Integer limit, Integer page, String sort, Sort.Direction dir, Integer miniprocurementPartnerLinkId, Integer miniprocurementPartnerProcurementId, Integer miniprocurementPartnerPartnerId, String miniprocurementPartnerTimeAdded, String miniprocurementPartnerLinkFirstAccessed) {
         super(limit, page, sort, dir);
-        this.miniprocurementPartnerEmail = miniprocurementPartnerEmail;
-        this.miniprocurementPartnerName = miniprocurementPartnerName;
+        this.miniprocurementPartnerLinkId = miniprocurementPartnerLinkId;
+        this.miniprocurementPartnerProcurementId = miniprocurementPartnerProcurementId;
+        this.miniprocurementPartnerPartnerId = miniprocurementPartnerPartnerId;
+        this.miniprocurementPartnerTimeAdded = miniprocurementPartnerTimeAdded;
+        this.miniprocurementPartnerLinkFirstAccessed = miniprocurementPartnerLinkFirstAccessed;
     }
 
 
@@ -21,11 +29,14 @@ public class MiniprocurementPartnerSearch extends SearchObject<MiniprocurementPa
     public SearchSpecPack<MiniprocurementPartner> getSearchSpec() {
 
         SearchSpecPack<MiniprocurementPartner> searchSpec = super.getSearchSpec();
-        if (miniprocurementPartnerName != null) {
-            searchSpec.addSpec(Specifications.specEquals("miniprocurementPartnerName", this.miniprocurementPartnerName));
+        if (miniprocurementPartnerLinkId != null) {
+            searchSpec.addSpec(Specifications.specEquals("miniprocurementPartnerLinkId", this.miniprocurementPartnerLinkId));
         }
-        if (miniprocurementPartnerEmail != null) {
-            searchSpec.addSpec(Specifications.specEquals("miniprocurementPartnerEmail", this.miniprocurementPartnerEmail));
+        if (miniprocurementPartnerProcurementId != null) {
+            searchSpec.addSpec(Specifications.specEquals("miniprocurementPartnerProcurementId", this.miniprocurementPartnerProcurementId));
+        }
+        if (miniprocurementPartnerPartnerId != null) {
+            searchSpec.addSpec(Specifications.specEquals("miniprocurementPartnerPartnerId", this.miniprocurementPartnerPartnerId));
         }
 
         return searchSpec;
